--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
       <h3>Para os amantes de história</h3>
 
+      <div class="divider"></div>
+
       <h2>Descubra 3 destinos imperdíveis em Busan</h2>
 
       <p>As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos. <br>
@@ -55,6 +57,8 @@
             <li>Orçamento </li>
         </ul>
 
+        <div class="divider"></div>
+        
     </main>
 
   </div>
