--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <img src="assets/img2.png" alt="Yonggungsa">
       
       <h2>1. Templo Haedong Yonggungsa </h2>
-      <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar - você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro. </p>
+      <p class="centralizar">O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar - você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro. </p>
       <p>Bom para:</p>
       <ul>
         <li>História.</li>
@@ -37,7 +37,7 @@
 
       <img class="conteudo-img" src="assets/img3.png" alt="templo Beomeo-sa">
       <h2>Templo Beomeo-sa</h2>
-      <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.</p>
+      <p class="centralizar">O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.</p>
       <p>Bom para:</p>
       <ul>
         <li>História.</li>
@@ -45,7 +45,7 @@
 
       <img class="conteudo-img" src="assets/img4.png" alt="Parque Yongdusan">
       <h2>Parque Yongdusan</h2>
-      <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.</p>
+      <p class="centralizar">O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.</p>
       <p>Bom para:</p>
       <ul>
         <li>Casais</li>
