--- a/index.html
+++ b/index.html
@@ -55,11 +55,13 @@
 
       <div class="divider"></div>
     </main>
-
+    <p>
+      As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo.
+    </p>
   </div>
 
   <footer>
-    As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo.
+    <strong>Criado por Vinicius Dantas. 04/06/2025</strong>
   </footer>
 
 </body>
