--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </ul>
 
       <img class="conteudo-img" src="assets/img3.png" alt="templo Beomeo-sa">
-      <h2>Templo Beomeo-sa</h2>
+      <h2>2. Templo Beomeo-sa</h2>
       <p class="centralizar">O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.</p>
       <p>Bom para:</p>
       <ul>
@@ -44,7 +44,7 @@
       </ul>
 
       <img class="conteudo-img" src="assets/img4.png" alt="Parque Yongdusan">
-      <h2>Parque Yongdusan</h2>
+      <h2>3. Parque Yongdusan</h2>
       <p class="centralizar">O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.</p>
       <p>Bom para:</p>
       <ul>
